+ The Great Leap Forward

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -296,6 +296,21 @@
       </li>
     </ul>
 
+    <h4>The Great Leap Forward</h4>
+    <ul>
+      <li>Becker, Jasper: 
+        <i class="booktitle">Hungry Ghosts: Mao's Secret Famine</i>. 1998. 
+        <!-- <a href=""><abbr></abbr> </a>. -->
+      </li>
+      <li>Dikötter, Frank: 
+        <i class="booktitle">Mao's Great Famine</i>.
+        <!-- <a href=""><abbr></abbr> </a>. -->
+      </li>
+      <li>Yang Jisheng: 
+        <i class="booktitle" lang="de">Grabstein: Die Große Chinesische Hungerkatastrophe 1958-1962</i>. <span lang="de">S. Fischer</span>, 2012.
+        <!-- <a href=""><abbr></abbr> </a>. -->
+      </li>
+    </ul>
 
     <h3>European History</h3>
     <h4>The Crusades Through Arab / Islamic Eyes</h4>
