Great Leap Forward / Great Famine: book details.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -296,21 +296,55 @@
       </li>
     </ul>
 
-    <h4>The Great Leap Forward</h4>
+    <h4>The Great Leap Forward &amp; the Great Famine</h4>
+    <p>The <a href="https://en.wikipedia.org/wiki/Great_Leap_Forward">Great Leap Forward</a> (1958-1961)
+      almost coincided with the less well-known
+      <a href="https://en.wikipedia.org/wiki/Great_Chinese_Famine">Great Chinese Famine</a> (1959-1961),
+      which cost between 15 and 43 million lives, depending on the sources.
+    </p>
     <ul>
       <li>Becker, Jasper: 
-        <i class="booktitle">Hungry Ghosts: Mao's Secret Famine</i>. 1998. 
-        <!-- <a href=""><abbr></abbr> </a>. -->
+        <i class="booktitle">Hungry Ghosts: Mao's Secret Famine</i>. Henry Holt &amp; Company (Macmillan), 1998. 
+        <a href="http://us.macmillan.com/books/9780805056686"><abbr>ISBN</abbr> 9780805056686</a>.
+        <br />See also the 
+        <a href="https://en.wikipedia.org/wiki/Hungry_Ghosts:_Mao's_Secret_Famine">Wikipedia article about <i class="booktitle">Hungry Ghosts: Mao's Secret Famine</i></a>.
       </li>
       <li>Dikötter, Frank: 
-        <i class="booktitle">Mao's Great Famine</i>.
-        <!-- <a href=""><abbr></abbr> </a>. -->
+        <i class="booktitle">Mao's Great Famine: The History of China's Most Devastating Catastrophe, 1958-62</i>. Bloomsbury, 2010.
+        <a href="http://www.bloomsbury.com/uk/maos-great-famine-9781408810033/"><abbr>ISBN</abbr> 9781408810033 (paperback)</a>.
+        <br />See also the
+        <a href="https://en.wikipedia.org/wiki/Mao's_Great_Famine">Wikipedia article about <i class="booktitle">Mao's Great Famine</i></a>,
+        the
+        <a href="http://www.frankdikotter.com/maos-great-famine/">author's web page</a>
+        and
+        <a href="http://www.theguardian.com/books/2010/sep/05/maos-great-famine-dikotter-review">Jonathan Fenby's review in <i class="newspaper">The Guardian</i></a>.
       </li>
-      <li>Yang Jisheng: 
-        <i class="booktitle" lang="de">Grabstein: Die Große Chinesische Hungerkatastrophe 1958-1962</i>. <span lang="de">S. Fischer</span>, 2012.
-        <!-- <a href=""><abbr></abbr> </a>. -->
+      <li>Yang Jisheng (<span lang="zh-CN">杨继绳</span> / Yáng Jìshéng): 
+        <i class="booktitle" lang="de">Grabstein - Mùbei: Die Große Chinesische Hungerkatastrophe 1958-1962</i>. <span lang="de">S. Fischer</span>, 2012.
+        <a href="http://www.fischerverlage.de/buch/grabstein-mubei/9783100800237"><abbr>ISBN</abbr> 978-3-10-080023-7</a> (German translation).
+        <br />
+        <i class="booktitle">Tombstone: The Untold Story of Mao's Great Famine</i>. Penguin, 2013. (656 pages)
+        <a href="https://www.penguin.co.uk/books/183039/tombstone/"><abbr>ISBN</abbr> 978-0241956984</a>.
       </li>
     </ul>
+
+    <!-- 
+    <h4></h4>
+    <ul>
+      <li>
+        <i class="booktitle"></i>.
+        <a href=""><abbr></abbr> </a>.
+      </li>
+      <li>
+        <i class="booktitle"></i>.
+        <a href=""><abbr></abbr> </a>.
+      </li>
+      <li>
+        <i class="booktitle"></i>.
+        <a href=""><abbr></abbr> </a>.
+      </li>
+    </ul>
+    -->
 
     <h3>European History</h3>
     <h4>The Crusades Through Arab / Islamic Eyes</h4>
