+ Voyages of Zheng He.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -234,12 +234,24 @@
     </ul>
 
     <h4>The Voyages of Zheng He</h4>
-    <!-- @@link wikipedia -->
+    <p><a href="https://en.wikipedia.org/wiki/Zheng_He">Zheng He</a> was a eunuch who led several 
+      expeditionary voyages between 1405 and 1433.
+      (Warning: <a href="https://en.wikipedia.org/wiki/Gavin_Menzies">Gavin Menzies'</a> books on Zheng He
+      should be treated as pseudohistory.)
+    </p>
     <ul>
       <li>Dreyer, Edward L.: 
         <i class="booktitle">Zheng He: China and the Oceans in the Early Ming Dynasty, 1405-1433</i>.
-        Library of World Biography Series.
-        <!-- <a href=""><abbr>ISBN</abbr> </a>. -->
+        Library of World Biography Series. Pearson, 2006. (256 pages)
+        <a href="http://www.pearson.ch/HigherEducation/Pearson/EAN/9780321084439/Zheng-He-China-and-the-Oceans-in-the-Early-Ming-Dynasty-1405-1433-Library-of-World-Biography-Series"><abbr>ISBN</abbr> 9780321084439</a>.
+      </li>
+      <li>Levathes, Louise:
+        <i class="booktitle">When China Ruled the Seas: The Treasure Fleet of the Dragon Throne, 1405-1433</i>.
+        Oxford University Press, 1997. (256 pages)
+        <a href="https://global.oup.com/academic/product/when-china-ruled-the-seas-9780195112078?cc=be&lang=en&"><abbr>ISBN</abbr> 9780195112078</a>.
+      </li>
+      <li>
+        <a href="http://asianhistory.about.com/od/china/p/zheng_he_bio.htm">Zheng He, Ming China's Great Admiral</a> on About.com.
       </li>
     </ul>
 
@@ -324,7 +336,7 @@
         <a href="http://www.fischerverlage.de/buch/grabstein-mubei/9783100800237"><abbr>ISBN</abbr> 978-3-10-080023-7</a> (German translation).
         <br />
         <i class="booktitle">Tombstone: The Untold Story of Mao's Great Famine</i>. Penguin, 2013. (656 pages)
-        <a href="https://www.penguin.co.uk/books/183039/tombstone/"><abbr>ISBN</abbr> 978-0241956984</a>.
+        <a href="https://www.penguin.co.uk/books/183039/tombstone/"><abbr>ISBN</abbr> 978-0241956984</a> (English translation).
       </li>
     </ul>
 
