--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -255,6 +255,22 @@
       </li>
     </ul>
 
+    <h4 lang="it">Matteo Ricci</h4>
+    <p><a href="https://en.wikipedia.org/wiki/Matteo_Ricci" lang="it" hreflang="en">Matteo Ricci</a> 
+      (1552 - 1610) was one of the most important Jesuit missionaries in China.
+    </p>
+    <ul>
+      <li>Hsia, R. Po-chia:
+        <i class="booktitle">A Jesuit in the Forbidden City: Matteo Ricci 1552-1610</i>. Oxford University Press, 2012. (384 pages)
+        <a href="https://global.oup.com/academic/product/a-jesuit-in-the-forbidden-city-9780199656530"><abbr>ISBN</abbr> 9780199656530</a>.
+      </li>
+      <li>Spence, Jonathan D.:
+        <i class="booktitle">The Memory Palace of Matteo Ricci</i>. Viking (Penguin), 1985. (368 pages)
+        <a href="http://www.penguin.com/book/the-memory-palace-of-matteo-ricci-by-jonathan-d-spence/9780140080988"><abbr>ISBN</abbr> 9780140080988 </a>.
+      </li>
+    </ul>
+
+
     <h4>The Opium Wars</h4>
     <ul>
       <li>Waley, Arthur: 
