--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -270,6 +270,27 @@
       </li>
     </ul>
 
+    <h4>The Kangxi Emperor</h4>
+    <p>The <a href="https://en.wikipedia.org/wiki/Kangxi_Emperor">Kangxi Emperor's</a> reign (1661 - 1772, 61 years)
+      was the longest in Chinese history. The Kangxi Emperor is considered one of China's greatest emperors.
+      One of the cultural achievements of his reign was the compilation of the
+      <a href="https://en.wikipedia.org/wiki/Kangxi_Dictionary">Kangxi Dictionary</a>.
+      The Flemish Jesuit missionary
+      <a href="https://en.wikipedia.org/wiki/Ferdinand_Verbiest" lang="nl" hreflang="en">Ferdinand Verbiest</a>
+      was appointed Head of the Mathematical Board and Director of the Observatory during
+      the Kangxi Emperor's reign.
+    </p>
+    <ul>
+      <li>Jami, Catherine: 
+        <i class="booktitle">The Emperor's New Mathematics: Western Learning and Imperial Authority During the Kangxi Reign (1662-1722)</i>.
+        Oxford University Press, 2011. (452 pages)
+        <a href="https://global.oup.com/academic/product/the-emperors-new-mathematics-9780199601400"><abbr>ISBN</abbr> 9780199601400</a>.
+      </li>
+      <li>Spence, Jonathan: 
+        <i class="booktitle">Emperor of China: Self-Portrait of K’ang-Hsi</i>. Vintage, 1988. (256 pages)
+        <a href="http://www.penguinrandomhouse.com/books/170905/emperor-of-china-by-jonathan-d-spence/"><abbr>ISBN</abbr> 9780679720744</a>.
+      </li>
+    </ul>
 
     <h4>The Opium Wars</h4>
     <ul>
