+ Cultural Revolution (start).

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -377,6 +377,31 @@
       </li>
     </ul>
 
+    <h4>The Cultural Revolution</h4>
+    <ul>
+      <li>Han, Dongping:
+        <i class="booktitle">The Unknown Cultural Revolution: Life and Change in a Chinese Village</i>. Monthly Review Press, 2008. (192 pages)
+        <a href="http://monthlyreview.org/product/unknown_cultural_revolution/"><abbr>ISBN</abbr> 9781583671801</a>.
+      </li>
+      <li>Tsering Woeser: 
+        <i class="booktitle" lang="fr">Mémoire interdite. Témoignages sur la Révolution culturelle au Tibet</i>.
+        Translated by Li Zhang &amp; Bernard Bourrit. Gallimard, 2006. (576 pages)
+        <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Bleu-de-Chine/Memoire-interdite"><abbr>ISBN</abbr> 9782070131150</a>.
+        <br />See also the 
+        <a href="https://fr.wikipedia.org/wiki/M%C3%A9moire_interdite._T%C3%A9moignages_sur_la_R%C3%A9volution_culturelle_au_Tibet" hreflang="fr">French Wikipedia article on <i class="booktitle" lang="fr">Mémoire interdite</i></a>.
+      </li>
+      <!-- 
+      <li>
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      <li>
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+       -->
+    </ul>
+
     <!-- 
     <h4></h4>
     <ul>
