Cultural Revolution: more books.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -390,6 +390,14 @@
         <br />See also the 
         <a href="https://fr.wikipedia.org/wiki/M%C3%A9moire_interdite._T%C3%A9moignages_sur_la_R%C3%A9volution_culturelle_au_Tibet" hreflang="fr">French Wikipedia article on <i class="booktitle" lang="fr">Mémoire interdite</i></a>.
       </li>
+      <li>MacFarquhar, Roderick; Schoenhals, Michael: 
+        <i class="booktitle">Mao’s Last Revolution</i>. Harvard University Press, 2008. (752 pages)
+        <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674027480"><abbr>ISBN</abbr> 9780674027480</a>.
+      </li>
+      <li>Wu, Yiching: 
+        <i class="booktitle">The Cultural Revolution at the Margins: Chinese Socialism in Crisis</i>. Harvard University Press, 2014. (368 pages)
+        <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674728790"><abbr>ISBN</abbr> 9780674728790</a>.
+      </li>
       <!-- 
       <li>
         <i class="booktitle"></i>.
