Cultural Revolution: more books.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -379,6 +379,18 @@
 
     <h4>The Cultural Revolution</h4>
     <ul>
+      <li>Kraus, Richard Cuart: 
+        <i class="booktitle">The Cultural Revolution: A Very Short Introduction</i>. Oxford: Oxford University Press, 2012. 
+        <!--a href=""></a><abbr-->ISBN</abbr> 9780199740550.
+      </li>
+      <li>Schoenhals, Michael: 
+        <i class="booktitle">China's Cultural Revolution, 1966-69: Not a Dinner Party</i>. Routledge, 1997. (352 pages)
+        <a href="https://www.routledge.com/products/9781563247378"><abbr>ISBN</abbr> 9781563247378</a>.
+      </li>
+      <li>MacFarquhar, Roderick; Schoenhals, Michael: 
+        <i class="booktitle">Mao’s Last Revolution</i>. Harvard University Press, 2008. (752 pages)
+        <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674027480"><abbr>ISBN</abbr> 9780674027480</a>.
+      </li>
       <li>Han, Dongping:
         <i class="booktitle">The Unknown Cultural Revolution: Life and Change in a Chinese Village</i>. Monthly Review Press, 2008. (192 pages)
         <a href="http://monthlyreview.org/product/unknown_cultural_revolution/"><abbr>ISBN</abbr> 9781583671801</a>.
@@ -390,15 +402,31 @@
         <br />See also the 
         <a href="https://fr.wikipedia.org/wiki/M%C3%A9moire_interdite._T%C3%A9moignages_sur_la_R%C3%A9volution_culturelle_au_Tibet" hreflang="fr">French Wikipedia article on <i class="booktitle" lang="fr">Mémoire interdite</i></a>.
       </li>
-      <li>MacFarquhar, Roderick; Schoenhals, Michael: 
-        <i class="booktitle">Mao’s Last Revolution</i>. Harvard University Press, 2008. (752 pages)
-        <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674027480"><abbr>ISBN</abbr> 9780674027480</a>.
-      </li>
       <li>Wu, Yiching: 
         <i class="booktitle">The Cultural Revolution at the Margins: Chinese Socialism in Crisis</i>. Harvard University Press, 2014. (368 pages)
         <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674728790"><abbr>ISBN</abbr> 9780674728790</a>.
       </li>
+      <li>Wang, Zhongfang: 
+        <i class="booktitle">Forged in Purgatory</i>. CreateSpace Independent Publishing, 2011.
+        <abbr>ISBN</abbr> 978-1466216457. <!-- http://www.amazon.com/Forged-Purgatory-Wang-Zhongfang/dp/146621645X/ -->
+      </li>
+      <li>Chen, Ruoxi: 
+        <i class="booktitle">The Execution of Mayor Yin and Other Stories from the Great Proletarian Cultural Revolution</i>. Edited by Howard Goldblatt. With a new introduction by Perry Link. Translated by Nancy Ing and Howard Goldblatt. Indiana University Press, 2004.
+        <a href="http://www.iupress.indiana.edu/product_info.php?products_id=21713"><abbr>ISBN</abbr> 978-0-253-21690-8</a>.
+      </li>
+      <li>Yang, Rae: 
+        <i class="booktitle">Spider Eaters: A Memoir</i>. 15th Anniversary Edition with a New Preface. University of California Press, 2013. (310 pages)
+        <a href="http://www.ucpress.edu/book.php?isbn=9780520276024"><abbr>ISBN</abbr> 9780520276024</a>.
+      </li>
+      <li>Cheng, Nien: 
+        <i class="booktitle">Life and Death in Shanghai</i>. Grove Press, 2010.
+        <a href="http://www.groveatlantic.com/#page=isbn9780802145161"><abbr>ISBN</abbr> 978-0-8021-4516-1</a>.
+      </li>
       <!-- 
+      <li>
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
       <li>
         <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
