--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -345,6 +345,15 @@
       </li>
     </ul>
 
+    <h4>Shen Dingyi</h4>
+    <p>See <a href="https://en.wikipedia.org/wiki/Shen_Dingyi">Shěn Dìngyī</a> on Wikipedia.</p>
+    <ul>
+      <li>Schoppa, R. Keith: 
+        <i class="booktitle">Blood Road: The Mystery of Shen Dingyi in Revolutionary China</i>. University of California Press, 1998. (322 pages)
+        <a href="http://www.ucpress.edu/book.php?isbn=9780520213869"><abbr>ISBN</abbr> 9780520213869</a>.
+      </li>
+    </ul>
+
     <h4>The Great Leap Forward &amp; the Great Famine</h4>
     <p>The <a href="https://en.wikipedia.org/wiki/Great_Leap_Forward">Great Leap Forward</a> (1958-1961)
       almost coincided with the less well-known
