+ Japanese occupation of Korea.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -431,6 +431,11 @@
         <i class="booktitle">Life and Death in Shanghai</i>. Grove Press, 2010.
         <a href="http://www.groveatlantic.com/#page=isbn9780802145161"><abbr>ISBN</abbr> 978-0-8021-4516-1</a>.
       </li>
+      <li>Jian, Ji-li: 
+        <i class="booktitle">Red Scarf Girl: A Memoir of the Cultural Revolution</i>. HarperCollins, 1997. (304 pages)
+        <a href="https://www.harpercollins.com/9780060275853/red-scarf-girl"><abbr>ISBN</abbr> 9780060275853 (hardcover)</a>
+        <abbr>ISBN</abbr> 9780064462082 (paperback).
+      </li>
       <!-- 
       <li>
         <i class="booktitle"></i>.
@@ -452,18 +457,49 @@
     <ul>
       <li>
         <i class="booktitle"></i>.
-        <a href=""><abbr></abbr> </a>.
+        <a href=""><abbr>ISBN</abbr> </a>.
       </li>
       <li>
         <i class="booktitle"></i>.
-        <a href=""><abbr></abbr> </a>.
+        <a href=""><abbr>ISBN</abbr> </a>.
       </li>
       <li>
         <i class="booktitle"></i>.
-        <a href=""><abbr></abbr> </a>.
+        <a href=""><abbr>ISBN</abbr> </a>.
       </li>
     </ul>
     -->
+
+    <h3>History of Other Parts of Asia</h3>
+    <h4>The Japanese Occupation of Korea</h4>
+    <ul>
+      <li>Duus, Peter: 
+        <i class="booktitle">The Abacus and the Sword: The Japanese Penetration of Korea, 1895-1910</i>. University of California Press, 1998. (498 pages)
+        <a href="http://www.ucpress.edu/book.php?isbn=9780520213616"><abbr>ISBN</abbr> 9780520213616</a>.
+      </li>
+      <li>Kang, Hildi: 
+        <i class="booktitle">Under the Black Umbrella: Voices from Colonial Korea, 1910–1945</i>. Cornell University Press, 2005. (192 pages)
+        <a href="http://www.cornellpress.cornell.edu/book/?GCOI=80140100557100"><abbr>ISBN</abbr> 978-0-8014-7270-1</a>.
+      </li>
+      <li>Caprio, Mark E.: 
+        <i class="booktitle">Japanese Assimilation Policies in Colonial Korea, 1910-1945</i>. University of Washington Press, 2009. (320 pages)
+        <a href="http://www.washington.edu/uwpress/search/books/CAPJAC.html"><abbr>ISBN</abbr> 9780295989013</a>.
+      </li>
+      <li>Uchida, Jun: 
+        <i class="booktitle">Brokers of Empire: Japanese Settler Colonialism in Korea, 1876–1945</i>. Harvard East Asian Monographs 337. Harvard University Press, 2014. (500 pages)
+        <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674492028"><abbr>ISBN</abbr> 9780674492028</a>.
+      </li>
+      <li>Park, Linda Sue: 
+        <i class="booktitle">When My Name Was Keoko</i>. Houghton Mifflin Harcourt (<abbr>HMH</abbr>), 2012. (208 pages)
+        <a href="http://www.hmhco.com/shop/books/When-My-Name-Was-Keoko/9780547722399"><abbr>ISBN</abbr> 9780547722399</a>. (A novel.)
+      </li>
+      <li>Eckert, Carter J.: 
+        <i class="booktitle">Offspring of Empire: The Koch'ang Kims and the Colonial Origins of Korean Capitalism, 1876-1945</i>. University of Washington Press, 2015.
+        <a href="http://www.washington.edu/uwpress/search/books/ECKOF2.html"><abbr>ISBN</abbr> 9780295993881</a>.
+      </li>
+    </ul>
+    <!-- Andre Schmid: Korea Between Empires 1895-1919. Columbia University Press, 2002. -->
+
 
     <h3>European History</h3>
     <h4>The Crusades Through Arab / Islamic Eyes</h4>
