Cultural Revolution: more books.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -415,6 +415,15 @@
         <i class="booktitle">The Cultural Revolution at the Margins: Chinese Socialism in Crisis</i>. Harvard University Press, 2014. (368 pages)
         <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674728790"><abbr>ISBN</abbr> 9780674728790</a>.
       </li>
+      <li>Song Yongyi, <abbr>ed.</abbr>: 
+        <i class="booktitle" lang="fr">Les massacres de la Révolution culturelle</i>. 
+        <span lang="fr"><abbr>Trad.</abbr> du chinois par Marc Raimbourg. Préface de Marie Holzman. Collection Folio documents (n° 47)</span>. Folio, 2009. (432 pages)
+        <a href="http://www.folio-lesite.fr/Catalogue/Folio/Folio-documents/Les-massacres-de-la-Revolution-culturelle"><abbr>ISBN</abbr> 9782070358496</a>.
+      </li>
+      <li>Andreas, Joel: 
+        <i class="booktitle">Rise of the Red Engineers: The Cultural Revolution and the Origins of China's New Class</i>. Stanford University Press, 2009. (368 pages)
+        <a href="http://www.sup.org/books/title/?id=16889"><abbr>ISBN</abbr> 9780804760782 (paper)</a> / <abbr>ISBN</abbr> 9780804771108 (digital).
+      </li>
       <li>Wang, Zhongfang: 
         <i class="booktitle">Forged in Purgatory</i>. CreateSpace Independent Publishing, 2011.
         <abbr>ISBN</abbr> 978-1466216457. <!-- http://www.amazon.com/Forged-Purgatory-Wang-Zhongfang/dp/146621645X/ -->
@@ -422,6 +431,10 @@
       <li>Chen, Ruoxi: 
         <i class="booktitle">The Execution of Mayor Yin and Other Stories from the Great Proletarian Cultural Revolution</i>. Edited by Howard Goldblatt. With a new introduction by Perry Link. Translated by Nancy Ing and Howard Goldblatt. Indiana University Press, 2004.
         <a href="http://www.iupress.indiana.edu/product_info.php?products_id=21713"><abbr>ISBN</abbr> 978-0-253-21690-8</a>.
+      </li>
+      <li>Gao Yuan: 
+        <i class="booktitle">Born Red: A Chronicle of the Cultural Revolution</i>. Stanford University Press, 1987. (416 pages)
+        <a href="http://www.sup.org/books/title/?id=2653"><abbr>ISBN</abbr> 9780804713696</a> (paper) / <abbr>ISBN</abbr> 9780804765893 (digital).
       </li>
       <li>Yang, Rae: 
         <i class="booktitle">Spider Eaters: A Memoir</i>. 15th Anniversary Edition with a New Preface. University of California Press, 2013. (310 pages)
