Cultral Revolution: Ji Xianlin: The Cowshed.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -428,6 +428,10 @@
         <i class="booktitle">Forged in Purgatory</i>. CreateSpace Independent Publishing, 2011.
         <abbr>ISBN</abbr> 978-1466216457. <!-- http://www.amazon.com/Forged-Purgatory-Wang-Zhongfang/dp/146621645X/ -->
       </li>
+      <li>Ji, Xianlin: 
+        <i class="booktitle">The Cowshed: Memories of the Chinese Cultural Revolution</i>. Introduction by Zha Jianying, translated from the Chinese by Chenxin Jiang. New York Review Books, 2016. (216 pages)
+        <a href="http://www.nyrb.com/collections/zha-jianying/products/the-cowshed?variant=2200903681"><abbr>ISBN</abbr> 9781590179260</a>.
+      </li>      
       <li>Chen, Ruoxi: 
         <i class="booktitle">The Execution of Mayor Yin and Other Stories from the Great Proletarian Cultural Revolution</i>. Edited by Howard Goldblatt. With a new introduction by Perry Link. Translated by Nancy Ing and Howard Goldblatt. Indiana University Press, 2004.
         <a href="http://www.iupress.indiana.edu/product_info.php?products_id=21713"><abbr>ISBN</abbr> 978-0-253-21690-8</a>.
@@ -458,14 +462,17 @@
         <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
       </li>
-      <li>
-        <i class="booktitle"></i>.
-        <a href=""><abbr>ISBN</abbr> </a>.
-      </li>
        -->
     </ul>
 
     <!-- 
+    <h4>Deng Xiaoping</h4>
+    <ul>
+      <li>
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+    </ul>
     <h4></h4>
     <ul>
       <li>
