--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -465,20 +465,21 @@
        -->
     </ul>
 
-    <!-- 
     <h4>Deng Xiaoping</h4>
     <ul>
-      <li>
-        <i class="booktitle"></i>.
-        <a href=""><abbr>ISBN</abbr> </a>.
+      <li>Salisbury, Harrison E.: 
+        <i class="booktitle">The New Emperors: China in the Era of Mao and Deng</i>. Little, Brown &amp; <abbr>Co.</abbr>, 1992.
+        <abbr>ISBN</abbr> 0316809101.<!-- @@check book -->
+      </li>
+      <li>Vogel, Ezra F.: 
+        <i class="booktitle">Deng Xiaoping and the Transformation of China</i>. Belknap Press / Harvard University Press, 2013. (928 pages)
+        <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674725867"><abbr>ISBN</abbr> 9780674725867</a>.
+        (See also the section &ldquo;related links&rdquo; on Harvard University Press's website.
       </li>
     </ul>
+    <!-- 
     <h4></h4>
     <ul>
-      <li>
-        <i class="booktitle"></i>.
-        <a href=""><abbr>ISBN</abbr> </a>.
-      </li>
       <li>
         <i class="booktitle"></i>.
         <a href=""><abbr>ISBN</abbr> </a>.
