Kangxi Emperor's poems.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -290,6 +290,11 @@
         <i class="booktitle">Emperor of China: Self-Portrait of K’ang-Hsi</i>. Vintage, 1988. (256 pages)
         <a href="http://www.penguinrandomhouse.com/books/170905/emperor-of-china-by-jonathan-d-spence/"><abbr>ISBN</abbr> 9780679720744</a>.
       </li>
+      <li>Kangxi Emperor: 
+        <i class="booktitle">Thirty-Six Views: The Kangxi Emperor’s Mountain Estate in Poetry and Prints</i>. 
+        Translated by Richard E. Strassberg. Introduction by Stephen H. Whiteman. Harvard University Press, 2016. (316 pages)
+        <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780884024095"><abbr>ISBN</abbr> 9780884024095</a>.
+      </li>
     </ul>
 
     <h4>The Opium Wars</h4>
