+ Parmenides Foundation (Germany).

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -929,6 +929,11 @@
         <span lang="de">Matthias Müller</span> organises lectures in Stuttgart and Berlin.
         <!-- Philosophische Notapotheke: http://www.randomhouse.de/Buch/Philosophische-Notapotheke-Erste-Hilfe-bei-Sinnfragen/Matthias-C-Mueller/e370407.rhd Diederichs, 2011. -->
       </li>
+      <li>The 
+        <a href="https://www.parmenides-foundation.org/">Parmenides Foundation</a> 
+        in Pullach near Munich does not teach philosophy but thinking.
+        See its <a href="https://www.parmenides-foundation.org/education/">education</a> page.
+      </li>
     </ul>
 
     <h3>The Netherlands</h3>
