Deng Xiaoping: more books.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -481,6 +481,37 @@
         <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674725867"><abbr>ISBN</abbr> 9780674725867</a>.
         (See also the section &ldquo;related links&rdquo; on Harvard University Press's website.
       </li>
+      <li>Chan, Anita; Madsen, Richard; Unger, Jonathan:
+        <i class="booktitle">Chen Village under Mao and Deng</i>. University of California Press, 1992. 
+        <abbr>ISBN</abbr> 978-0520081093. (Out of print)
+      </li>
+      <li>Deng, Rong: 
+        <i class="booktitle">Deng Xiaoping and the Cultural Revolution: A Daughter Recalls the Critical Years</i>. Foreign Languages Press, 2002.
+        <abbr>ISBN</abbr>  978-7119030401.
+      </li>
+      <li>Yang, Benjamin: 
+        <i class="booktitle">Deng: A Political Biography</i>. (East Gate Books. M. E. Sharpe, 1998) Routledge, 2015.
+        <a href="https://www.routledge.com/products/9780585025674"><abbr>ISBN</abbr> 9780585025674 (e-book)</a>.
+      </li>
+      <li>Evans, Richard: 
+        <i class="booktitle">Deng Xiaoping and the Making of Modern China</i>. Viking, 1993. 
+        <a href="http://www.penguin.com/book/deng-xiaoping-and-the-making-of-modern-china-by-richard-evans/9780140139457"><abbr>ISBN</abbr> 9780140139457</a>.
+        <br />Richard Evans was the British ambassador in China from 1984 to 1988.
+        <a href="http://www.journals.uchicago.edu/doi/10.2307/2950291">Benjamin Yang's review</a> in
+        <i class="journal">The China Journal</i> (Vol. 35, Jan. 1996) points out that Evans 
+        <q>earnestly tries to offer an honest depiction of Deng's life and career</q>
+        but that the book is of <q>mediocre quality</q>.
+        See also the 
+        <a href="https://en.wikipedia.org/wiki/Deng_Xiaoping_and_the_Making_of_Modern_China">Wikipedia article on <i class="booktitle">Deng Xiaoping and the Making of Modern China</i></a>.
+      </li>
+      <li>Marti, Michael E.: 
+        <i class="booktitle">China and the Legacy of Deng Xiaoping: From Communist Revolution to Capitalist Evolution</i>. Potomac Books, 2001.
+        <abbr>ISBN</abbr> 1-57488-416-6.
+      </li>
+      <li><abbr>BBC</abbr>: 
+        <a href="http://www.bbc.co.uk/programmes/p01sbmkh">Deng Xiaoping and the Making of Modern China</a>,
+        documentary, 55 minutes.
+      </li>
     </ul>
     <!-- 
     <h4></h4>
