--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -392,6 +392,9 @@
     </ul>
 
     <h4>The Cultural Revolution</h4>
+    <p>See also 
+      <a href="http://hua.umf.maine.edu/China/culturr.html">Marilyn Shea's bibliography on the Cultural Revolution</a>.
+    </p>
     <ul>
       <li>Kraus, Richard Cuart: 
         <i class="booktitle">The Cultural Revolution: A Very Short Introduction</i>. Oxford: Oxford University Press, 2012. 
