Deng Xiaoping: more references.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -482,7 +482,9 @@
       <li>Vogel, Ezra F.: 
         <i class="booktitle">Deng Xiaoping and the Transformation of China</i>. Belknap Press / Harvard University Press, 2013. (928 pages)
         <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674725867"><abbr>ISBN</abbr> 9780674725867</a>.
-        (See also the section &ldquo;related links&rdquo; on Harvard University Press's website.
+        (See also the section &ldquo;related links&rdquo; on Harvard University Press's website
+        and the 
+        <a href="http://scholar.harvard.edu/ezravogel/pages/deng-xiaoping-book">bibliography and glossary on Ezra Vogel's website</a>.)
       </li>
       <li>Chan, Anita; Madsen, Richard; Unger, Jonathan:
         <i class="booktitle">Chen Village under Mao and Deng</i>. University of California Press, 1992. 
@@ -490,14 +492,14 @@
       </li>
       <li>Deng, Rong: 
         <i class="booktitle">Deng Xiaoping and the Cultural Revolution: A Daughter Recalls the Critical Years</i>. Foreign Languages Press, 2002.
-        <abbr>ISBN</abbr>  978-7119030401.
+        <abbr>ISBN</abbr> 978-7119030401.
       </li>
       <li>Yang, Benjamin: 
         <i class="booktitle">Deng: A Political Biography</i>. (East Gate Books. M. E. Sharpe, 1998) Routledge, 2015.
         <a href="https://www.routledge.com/products/9780585025674"><abbr>ISBN</abbr> 9780585025674 (e-book)</a>.
       </li>
       <li>Evans, Richard: 
-        <i class="booktitle">Deng Xiaoping and the Making of Modern China</i>. Viking, 1993. 
+        <i class="booktitle">Deng Xiaoping and the Making of Modern China</i>. Viking, 1993.
         <a href="http://www.penguin.com/book/deng-xiaoping-and-the-making-of-modern-china-by-richard-evans/9780140139457"><abbr>ISBN</abbr> 9780140139457</a>.
         <br />Richard Evans was the British ambassador in China from 1984 to 1988.
         <a href="http://www.journals.uchicago.edu/doi/10.2307/2950291">Benjamin Yang's review</a> in
