Silk Road: International Dunhuang Project; Hill

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -132,6 +132,9 @@
 
     <h4>The Silk Road</h4>
     <ul>
+      <li>
+        <a href="http://idp.bl.uk/">The International Dunhuang Project: The Silk Road Online</a>.
+      </li>
       <li>Millward, James A.: 
         <i class="booktitle">The Silk Road: A Very Short Introduction</i>. 
         Oxford: Oxford University Press, 2013.
@@ -152,6 +155,9 @@
       <li>Liu, Xinru: 
         <i class="booktitle">The Silk Road in World History</i>. Oxford University Press, 2010. 
         <a href="https://global.oup.com/academic/product/the-silk-road-in-world-history-9780195161748"><abbr>ISBN</abbr> 9780195161748</a>.
+      </li>
+      <li>Hill, John E.:
+        <a href="http://depts.washington.edu/silkroad/texts/weilue/weilue.html">Weilue: The Peoples of the West</a>.
       </li>
       <li>See perhaps also Owen Lattimore (<abbr>e.g.</abbr> <i class="booktitle">Silks, Spices and Empire</i>). 
       </li>
