--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -34,6 +34,7 @@
           <li><a href="../science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
+          <li><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
         </ul>
       </li>
       <li><a href="../humanities/index.html">Humanities</a>
