--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -34,6 +34,7 @@
           <li><a href="../science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
+          <li><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
           <li class="active"><a href="hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a>
           </li>
         </ul>
