--- a/science/index.html
+++ b/science/index.html
@@ -34,9 +34,10 @@
           <li><a href="../science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
+          <li><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
         </ul>
       </li>
-      <li><a href="../humanities/index.html">Humanities</a>
+      <li><a href="../science/index.html">Humanities</a>
         <ul>
           <li><a href="../humanities/girard_rene.html" lang="fr">René Girard</a>
           </li>
