--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -34,7 +34,7 @@
           <li><a href="../science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
-          <li class="active"><a href="../humanities/mathematics.html">Mathematics &amp; Statistics</a>
+          <li class="active"><a href="../science/mathematics.html">Mathematics &amp; Statistics</a>
         </ul>
       </li>
       <li><a href="../humanities/index.html">Humanities</a>
