+ YT: René Girard Archives (fr).

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -170,6 +170,11 @@
         <a href="http://www.iep.utm.edu/girard/">René Girard (1923&mdash;2015)</a>: entry in the
         <i class="website">Internet Encyclopedia of Philosophy</i>.
       </li>
+      <li>
+        <a href="https://www.youtube.com/channel/UCrd5hdVqKyLnO8cSp5lndsA/">René Girard Archives</a>:
+        YouTube channels with videos of conference talks, lectures and debates with René Girard,
+        usually in French.
+      </li>
     </ul>
 
     <h2 id="girard_biblio">Books</h2>
