+ Pop culture: Game of Thrones.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -288,6 +288,58 @@
         <i class="newspaper">The Guardian</i>, 12.01.2016. 
       </li>
     </ul>
+
+    <h2 id="got">Pop Culture: Game of Thrones</h2>
+    <ul>
+      <li><abbr>PBS</abbr> NewsHour:
+        <a href="https://www.youtube.com/watch?v=zQ4Umju2VrM">What does a medieval lit scholar see in 'Game of Thrones?'</a>
+        (YouTube, 7 minutes):
+        <a href="http://www.sonoma.edu/english/people/brantley-bryant.html">Brantley L. Bryant</a>,
+        associate professor of early and medieval British literature at Sonoma State University,
+        discusses elements of medieval literature in the <abbr>HBO</abbr> TV show.
+      </li>
+      <li>Mayes T.:
+        <a href="https://www.youtube.com/watch?v=Sc_FkoSFwNM">The Real History Behind Game Of Thrones - Part 1</a>
+        (YouTube, 18 minutes) and
+        <a href="https://www.youtube.com/watch?v=ZJK0TiIcbXw">The Real History Behind Game Of Thrones - Part 2</a>
+        (YouTube, 22 minute).
+        <br />Two important sources are the 
+        <a href="https://en.wikipedia.org/wiki/Wars_of_the_Roses">Wars of the Roses</a> 
+        in 15th-century England and <span lang="fr">Maurice Druon</span>'s series of historival novels
+        <a href="https://en.wikipedia.org/wiki/The_Accursed_Kings" class="booktitle">The Accursed Kings (<span lang="fr">Les Rois maudits</span>)</a>.
+        Valyrian steel was inspired by <a href="https://en.wikipedia.org/wiki/Damascus_steel">Damascus steel</a>, whose method of production has been lost.
+        The Red Wedding was inspired by the
+        <a href="https://en.wikipedia.org/wiki/Clan_Douglas#Black_Dinner">Black Dinner (1440)</a>
+        and the 
+        <a href="https://en.wikipedia.org/wiki/Massacre_of_Glencoe">Massacre of Glencoe (1692)</a>.
+        The Wall was inspired by <a href="https://en.wikipedia.org/wiki/Hadrian's_Wall">Hadrian's Wall</a>.
+        The Knight's Watch was inspired by 
+        <a href="https://en.wikipedia.org/wiki/Military_order_%28monastic_society%29">military orders</a> such as the
+        <a href="https://en.wikipedia.org/wiki/Knights_Hospitaller">Knights Hospitaller</a> and the
+        <a href="https://en.wikipedia.org/wiki/Knights_Templar">Knights Templar</a>.
+        The Dothraki were inspired by nomadic people like the
+        <a href="https://en.wikipedia.org/wiki/Huns">Huns</a> and the
+        <a href="https://en.wikipedia.org/wiki/Mongols">Mongols</a>.
+        The Unsullied were inspired by slave armies such as the 
+        <a href="https://en.wikipedia.org/wiki/Mamluk">Mamluks</a> and the
+        <a href="https://en.wikipedia.org/wiki/Janissaries">Janissaries</a>.
+        The fighting pits of Meereen were inspired by the
+        <a href="https://en.wikipedia.org/wiki/Gladiator">gladiator games</a> in Ancient Rome.
+      </li>
+      <li>History Buffs:
+        <a href="https://www.youtube.com/watch?v=knGeCNaAdAU">Why Game of Thrones reads like a History Book and not a Fantasy Epic</a>
+        (YouTube, 20 minutes).
+      </li>
+      <li>Business Insider: 
+        <a href="https://www.youtube.com/watch?v=wSTZFf0NKUI">Game of Thrones: Economics of Westeros</a>
+        (YouTube, 4 minutes).
+      </li>
+      <li>It's Okay to Be Smart: 
+        <a href="https://www.youtube.com/watch?v=Utu-LpJn3Is">The Science of Game of Thrones</a>
+        (YouTube, 8 minutes).
+      </li>
+    </ul>
+
   </main>
 
   <footer>
