+ Bayesian Probability; + base rate fallacy.

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -99,10 +99,38 @@
         Oxford University Press, 2016. (832 p.)
         <a href="https://global.oup.com/academic/product/the-oxford-handbook-of-probability-and-philosophy-9780199607617?cc=de&lang=en&"><abbr>ISBN</abbr> 9780199607617</a>.
       </li>
+    </ul>
+    <p>Articles and YouTube Videos:</p>
+    <ul>
       <li>
         <a href="https://en.wikipedia.org/wiki/Monty_Hall_problem">Monty Hall problem</a> on Wikipedia.
         (See also <a href="https://www.youtube.com/watch?v=zODxrtj156I">A Paradox that Fooled 1,000 PhDs!</a>
         on the Scam School channel on YouTube.)
+      </li>
+      <li>Wikipedia:
+        <a href="https://en.wikipedia.org/wiki/Base_rate_fallacy">Base rate fallacy</a>.
+      </li>
+    </ul>
+
+    <h3>Bayesian Probability and Bayes' Theorem</h3>
+    <ul>
+      <li>Wireless Philosophy:
+        <a href="https://www.youtube.com/watch?v=OqmJhPQYRc8">Critical Thinking - Fundamentals: Bayes' Theorem</a>
+        (YouTube, 6 minutes): a short and very accessible introduction.
+      </li>
+      <li>Wikipedia: 
+        <a href="https://en.wikipedia.org/wiki/Bayes'_theorem">Bayes' theorem</a>.
+      </li>
+      <li>Joyce, James: 
+        <a href="http://plato.stanford.edu/archives/fall2008/entries/bayes-theorem/">Bayes' Theorem</a>, 
+        <i class="website">The Stanford Encyclopedia of Philosophy</i> (Fall 2008 Edition), Edward N. Zalta (<abbr>ed.</abbr>). 
+      </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Bayesian_probability">Bayesian probability</a>.
+      </li>
+      <li>Talbott, William:
+        <a href="http://plato.stanford.edu/archives/sum2015/entries/epistemology-bayesian/">Bayesian Epistemology</a>, 
+        <i class="website">The Stanford Encyclopedia of Philosophy</i> (Summer 2015 Edition), Edward N. Zalta (<abbr>ed.</abbr>).
       </li>
     </ul>
 
