+ Game of Thrones & history; GoT & philosophy.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -312,6 +312,8 @@
         <a href="https://en.wikipedia.org/wiki/Clan_Douglas#Black_Dinner">Black Dinner (1440)</a>
         and the 
         <a href="https://en.wikipedia.org/wiki/Massacre_of_Glencoe">Massacre of Glencoe (1692)</a>.
+        Cersei's walk of shame was inspired by 
+        <a href="https://en.wikipedia.org/wiki/Jane_Shore#Prison.2C_second_marriage_and_later_life">Jane Shore's penance walk</a> in the late 15th century.
         The Wall was inspired by <a href="https://en.wikipedia.org/wiki/Hadrian's_Wall">Hadrian's Wall</a>.
         The Knight's Watch was inspired by 
         <a href="https://en.wikipedia.org/wiki/Military_order_%28monastic_society%29">military orders</a> such as the
@@ -337,6 +339,11 @@
       <li>It's Okay to Be Smart: 
         <a href="https://www.youtube.com/watch?v=Utu-LpJn3Is">The Science of Game of Thrones</a>
         (YouTube, 8 minutes).
+      </li>
+      <li>Jacoby, Henry:
+        <i class="booktitle">Game of Thrones and Philosophy: Logic Cuts Deeper Than Swords</i>.
+        Wiley, 2012. (320 pages).
+        <a href="http://eu.wiley.com/WileyCDA/WileyTitle/productCd-1118161998.html"><abbr>ISN</abbr> 978-1-118-16199-9</a>.
       </li>
     </ul>
 
