GoT: Physics of the moon door.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -345,6 +345,10 @@
         Wiley, 2012. (320 pages).
         <a href="http://eu.wiley.com/WileyCDA/WileyTitle/productCd-1118161998.html"><abbr>ISN</abbr> 978-1-118-16199-9</a>.
       </li>
+      <li>Rothman, Lily:
+        <a href="http://time.com/104625/game-of-thrones-moon-door/">The Physics of the <i>Game of Thrones</i> “Moon Door”</a>,
+        <i class="magazine">Time</i>, 19.05.2014.
+      </li>
     </ul>
 
   </main>
